Bug 510829 - Animated image formats (GIF, et plus) scaled incorrectly in information panel
Summary: Animated image formats (GIF, et plus) scaled incorrectly in information panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 25.08.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-20 14:53 UTC by OIRNOIR
Modified: 2026-03-10 10:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Incorrect scaling behavior in Dolphin (313.85 KB, image/png)
2025-10-20 14:53 UTC, OIRNOIR
Details
A closer screenshot of the undesired behavior. (114.38 KB, image/png)
2025-10-20 14:54 UTC, OIRNOIR
Details
The same file viewed in Gwenview (616.21 KB, image/png)
2025-10-20 14:55 UTC, OIRNOIR
Details
The .gif I reproduced this behavior on. (1.12 MB, image/gif)
2025-10-20 14:56 UTC, OIRNOIR
Details
Screenshot of first frame of original gif as PNG (98.92 KB, image/png)
2026-03-07 18:47 UTC, OIRNOIR
Details
New Screenshot of the first frame of the original gif (pixelation issues only) (52.36 KB, image/png)
2026-03-07 18:48 UTC, OIRNOIR
Details
First frame of a second (wide) gif as a png (117.09 KB, image/png)
2026-03-07 18:48 UTC, OIRNOIR
Details
First frame of a second (wide) gif. Note both scaling and pixelation issues. (66.06 KB, image/png)
2026-03-07 18:49 UTC, OIRNOIR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OIRNOIR 2025-10-20 14:53:13 UTC
Created attachment 185923 [details]
Incorrect scaling behavior in Dolphin

SUMMARY
GIF, animated AVIF, animated JXL, and animated WebP files are all scaled incorrectly when viewed in Dolphin.
This effect decreases as display scaling increases, with the issue being more noticeable at display scalings under 200%.
I would guess that this is connected to Bug 497576, because this has very similar behavior to what used to affect ALL image types (not just animated ones) prior to the resolution of Bug 497576.

STEPS TO REPRODUCE
On 150% display scaling:
1. Obtain an animated gif, avif, jxl, or webp file (or another animated type that Dolphin supports
2. Open Dolphin to the directory of the file
3. Ensure that View -> Show Panels -> Information is enabled, and the information panel to the right is viewable
4. Right-click the Information panel and ensure that Preview is enabled
5. Click on or hover over the animated gif, avif, jxl, or webp file.

OBSERVED RESULT
The file is shown wildly not to scale, slightly pixelated and too large for its frame. The outer parts of the animated graphic are cut off.

EXPECTED RESULT
The entire animated image is cleanly visible in the preview frame, with no unnecessary pixelation and proper scaling.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.3-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 22 × Intel® Core™ Ultra 7 155H
Memory: 48 GiB of RAM (46.7 GiB usable)
Graphics Processor: Intel® Arc
Manufacturer: Notebook
Product Name: V54x_6x_TU
System Version: V540TU

ADDITIONAL INFORMATION
I've been experiencing this issue ever since Bug 497576 was introduced, and it was never fixed alongside it. I apologize for my tardiness in reporting the issue.
Comment 1 OIRNOIR 2025-10-20 14:54:37 UTC
Created attachment 185924 [details]
A closer screenshot of the undesired behavior.
Comment 2 OIRNOIR 2025-10-20 14:55:31 UTC
Created attachment 185925 [details]
The same file viewed in Gwenview

Note that the warning icon at the top is visible here but not visible in any of the Dolphin previews.
Comment 3 OIRNOIR 2025-10-20 14:56:45 UTC
Created attachment 185926 [details]
The .gif I reproduced this behavior on.

It works with any .gif, and this was the one I happened to reproduce it on. I created files of the other formats by using ffmpeg and imagemagick to convert from this gif to those other formats.
Comment 4 OIRNOIR 2025-10-24 12:22:12 UTC
Just updated, can reproduce in Plasma 6.5

Operating System: Arch Linux 
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.4-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 22 × Intel® Core™ Ultra 7 155H
Memory: 48 GiB of RAM (46.7 GiB usable)
Graphics Processor: Intel® Arc
Manufacturer: Notebook
Product Name: V54x_6x_TU
System Version: V540TU
Comment 5 OIRNOIR 2025-11-06 15:09:46 UTC
Still broken in Dolphin 25.08.3
Comment 6 Méven 2026-03-07 11:27:27 UTC
I don't reproduce this with dolphin 25.12 (Plasma 6.6 arch, KDE Frameworks 6.23).

Please confirm.
Comment 7 OIRNOIR 2026-03-07 18:46:13 UTC
(In reply to Méven from comment #6)
> I don't reproduce this with dolphin 25.12 (Plasma 6.6 arch, KDE Frameworks
> 6.23).
> 
> Please confirm.

I have all the same versions as you, on Arch.

I'm not experiencing scaling issues anymore for gifs that are taller than they are wide, but I do notice some weird scaling issues for gifs that are wider than they are tall. And, for both, I notice some weird pixelation that occurs for the gifs while the individual frames (converted to png) appear smooth at the same size in Dolphin.

Attaching some screenshots of this behavior. The first shows how the first frame of the already attached gif (from 2025-10-20) is expected to show (as a .png), the second shows its blurry but correct scaling as of today for this gif.

The third and fourth screenshot show the same but with a second gif. Note that this gif is wider than it is tall, and it is cut off on the edges. It experiences the same pixelation problem. The gif I used here will be attached last.
Comment 8 OIRNOIR 2026-03-07 18:47:33 UTC
Created attachment 190454 [details]
Screenshot of first frame of original gif as PNG

Sorry for the spam. I don't see any way to add a group of attachments without sending a bunch of messages.
Comment 9 OIRNOIR 2026-03-07 18:48:13 UTC
Created attachment 190455 [details]
New Screenshot of the first frame of the original gif (pixelation issues only)
Comment 10 OIRNOIR 2026-03-07 18:48:58 UTC
Created attachment 190456 [details]
First frame of a second (wide) gif as a png
Comment 11 OIRNOIR 2026-03-07 18:49:48 UTC
Created attachment 190457 [details]
First frame of a second (wide) gif. Note both scaling and pixelation issues.
Comment 12 OIRNOIR 2026-03-07 18:56:34 UTC
Was not able to attach the second gif due to file size limit. I believe it can be accessible here as the "HD GIF":
https://tenor.com/view/cat-swim-in-milk-cat-kitty-milk-milk-cat-gif-23473453
Comment 13 Méven Car 2026-03-09 10:33:25 UTC
I understand the issue now.

That's the dpr that's not right.
Comment 14 Bug Janitor Service 2026-03-09 10:49:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1198
Comment 15 Méven 2026-03-10 09:04:40 UTC
Git commit 359ba4c0700ff43a68ad62517bf7c638c341be8a by Méven Car.
Committed on 10/03/2026 at 09:04.
Pushed by meven into branch 'master'.

information/pixmapviewer: handle hdipi for animated images

M  +5    -2    src/panels/information/pixmapviewer.cpp

https://invent.kde.org/system/dolphin/-/commit/359ba4c0700ff43a68ad62517bf7c638c341be8a
Comment 16 Méven 2026-03-10 10:55:59 UTC
Git commit 7ad656d72869115456d5721f470e7abadb94d5f9 by Méven Car.
Committed on 10/03/2026 at 09:04.
Pushed by meven into branch 'release/26.04'.

information/pixmapviewer: handle hdipi for animated images


(cherry picked from commit 359ba4c0700ff43a68ad62517bf7c638c341be8a)

Co-authored-by: Méven Car <meven@kde.org>

M  +5    -2    src/panels/information/pixmapviewer.cpp

https://invent.kde.org/system/dolphin/-/commit/7ad656d72869115456d5721f470e7abadb94d5f9