information/pixmapviewer: handle hdipi for animated images

BUG: 510829


(cherry picked from commit 359ba4c0700ff43a68ad62517bf7c638c341be8a)

Co-authored-by: Méven Car <meven@kde.org>